<resources>
    <string name="app_name">DueRemember</string>

    //Navbar Strings
    <string name="bnb_all_tasks">All Tasks</string>
    <string name="bnb_completed">Completed Tasks</string>
    <string name="bnb_today">Today\'s Tasks</string>

    //All Tasks List
    <string name="reminder_resolved_label">Completed</string>
    <string name="empty_list_label">No Tasks yet.</string>
    <string name="reminder_due">Due:</string>

    //Menu Strings
    <string name="new_reminder">New Reminder</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="share_reminder">Share Reminder</string>

    //New Reminder
    <string name="reminder_title_placeholder"><i>Enter a title.</i></string>
    <string name="reminder_desc_placeholder"><i>Enter a short description.</i></string>
    <string name="desc_reminder_image">Image Set</string>
    <string name="desc_reminder_no_image">No Image Set</string>
    <string name="desc_reminder_image_btn">Take a Photo</string>
    <string name="reminder_no_desc">No Description</string>
    <string name="checkbox_label">Completed</string>
    <string name="reminder_solved">Completed</string>
    <string name="reminder_not_solved">Not Completed</string>
    <string name="reminder_message">Reminder Title: %1$s,  \nDue By: %2$s, \nDescription: "%3$s", \nStatus: %4$s. </string>
    <string name="detail_label"><b>Due Date and Status: </b></string>
    <string name="save_reminder">Save Reminder</string>
    <string name="reminder_report_subject">Reminder Details</string>
    <string name="send_report">Send Reminder</string>
    <string name="date_selected">Date</string>
    <string name="time_selected">Time</string>

    //Notifications
    <string name="notification_due_soon_channel_name">Reminder Due Dates</string>
    <string name="notification_past_due_channel_name">Reminder Past Due</string>


</resources>