<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewReminderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/reminder_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/desc_reminder_image"
                android:background="@drawable/imageview_outline"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/grey" />

            <ImageButton
                android:id="@+id/reminder_cam"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginTop="3dp"
                android:background="?attr/colorPrimary"
                android:contentDescription="@string/desc_reminder_image_btn"
                android:src="@drawable/ic_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_image" />

            <EditText
                android:id="@+id/reminder_title"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:autofillHints="@string/reminder_title_placeholder"
                android:background="@drawable/edittext_outline"
                android:ems="10"
                android:hint="@string/reminder_title_placeholder"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/reminder_image"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/reminder_desc"
                android:layout_width="0dp"
                android:layout_height="118dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:autofillHints="@string/reminder_desc_placeholder"
                android:background="@drawable/edittext_outline"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/reminder_desc_placeholder"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/reminder_image"
                app:layout_constraintTop_toBottomOf="@+id/reminder_title" />

            <TextView
                android:id="@+id/detail_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reminder_cam" />

            <Button
                android:id="@+id/date_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_label"
                tools:text="DAY MTH YEAR" />

            <Button
                android:id="@+id/time_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_btn"
                tools:text="00:00" />

            <CheckBox
                android:id="@+id/completed_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/checkbox_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reminder_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/save_reminder"
        android:src="@drawable/ic_save_reminder"
        app:tint="?colorSurface" />

</FrameLayout>
